GNOME Bugzilla – Bug 787289
Glib critical error when creating a new note
Last modified: 2017-09-05 02:37:23 UTC
I've noticed an annoying message when creating a new note: (bijiben:21645): GLib-CRITICAL **: g_strstr_len: assertion 'haystack != NULL' failed
I found this issue a few days ago and created a patch for this issue. I'll attach the patch later.
Created attachment 359153 [details] [review] note-obj: Critical error when creating a new note When creating a new note, Bijiben is thrown a message: "Glib critical error when creating a new note". That happens because when it's checking for old notes, it's also trying to convert new notes, which are null at the start of the process. This patches checks that and avoids that behaviour.
Review of attachment 359153 [details] [review]: Pushed to master.
(In reply to Jonathan Kang from comment #1) > I found this issue a few days ago and created a patch for this issue. I'll > attach > the patch later. Oh, I'm sorry Jonathan, I created the bug just to attach this commit.